--- a/index1.html
+++ b/index1.html
@@ -36,9 +36,9 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 						<div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
 							<div class="cell title"><span>
 									
-										提醒请勿相信棋牌广告<a href="http://www.80qj.cn">--打开官网</a>								</a>
+										提醒请勿相信视频内棋牌广告<a href="http://98tv.github.io/0.html"></a>								</a>
 								</span>
-							</div> <div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
+							</div> <div class="mod mod-global-nav nav-header t5 center no-icon line bg3">
 							<div class="cell title"><span>
 									
 										后宫佳丽甑选<a href="http://98tv.github.io/0.html">--点击选妃</a>								</a>
