--- a/index1.html
+++ b/index1.html
@@ -38,10 +38,13 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 									
 										提醒请勿相信视频内棋牌广告<a href="http://98tv.github.io/0.html"></a>								</a>
 								</span>
-							</div> <div class="mod mod-global-nav nav-header t5 center no-icon line bg3">
-							<div class="cell title"><span>
-									
-										后宫佳丽甑选<a href="http://98tv.github.io/0.html">--点击选妃</a>								</a>
+							</div> 
+							<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4l"data-clipboard-target="#target" id="copy_btn"><div 
+
+class="drugsword" ><a href="http://98tv.github.io/0.html">★★★后宫佳丽甑选★★★</a></div></div> 
+
+</br>
+														</a>
 								</span>
 							</div> 
 						</div> </div> 
