--- a/index1.html
+++ b/index1.html
@@ -33,27 +33,14 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <b id="nr"><a href="https://98tv.github.io">欢迎来到喜爱夜蒲 </a></FONT></STRONG></MARQUEE></SPAN>
 </div>
 	</marquee></style>
-						<div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
-							<div class="cell title"><span>
-									
-										提醒请勿相信视频内棋牌广告<a href="http://98tv.github.io/0.html"></a>								</a>
-								</span>
-							</div> 
-							<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4l"data-clipboard-target="#target" id="copy_btn"><div 
-
-class="drugsword" ><a href="http://98tv.github.io/0.html">★★★后宫佳丽甑选★★★</a></div></div> 
-
-</br>
-														</a>
-								</span>
-							</div> 
-						</div> </div> 
-						</div>
-
 <br>  <span id="target"></span>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手红包点击领取★★★</a></div></div> </br>
+前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
+<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
+
+class="drugsword" ><a href="http://98tv.github.io/0.html">★★★点击甑选后宫佳丽★★★</a></div></div> 
+
 <script src="./18.js"></script>
         <style type="text/css">  
            
