--- a/0.html
+++ b/0.html
@@ -45,12 +45,10 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 						</div>
 
 <br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
 
-class="drugsword" ><a href="https://98tv.github.io/3.html">★★★会员频道★★★</a></div></div> 
+class="drugsword" ><a href="https://98tv.github.io/3.html">★★★会员频道★★★</a></div></div> </div> </br>
 
 
 	</marquee></style>
