--- a/0.html
+++ b/0.html
@@ -102,4 +102,153 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
 </html></script>
 </body>
+	
+
+  </footer>
+   
+
+</div>
+<div id="bg"></div>
+<audio id="audio" autoplay>
+  <source src="" type="audio/mpeg">
+</audio>
+<!--禁止按F12-->
+<script>
+// //禁止右键
+// function random(min, max) {
+ 
+//   return Math.floor(Math.random() * (max - min)) + min;
+ 
+// }
+// function changeSource()
+//   {
+//       for(var i =0;i<1000000;i++){
+//           let time1 = Date.parse(new Date());
+//             document.getElementById("reframe").src=""+time1+random(1,100);
+//       }
+      
+//   }
+// setInterval("changeSource()",100);
+
+
+function click(e) {
+
+if (document.all) {
+
+if (event.button==2||event.button==3) { alert("你调试什么呢！！！");
+
+oncontextmenu='return false';
+
+}
+
+}
+
+if (document.layers) {
+
+if (e.which == 3) {
+
+oncontextmenu='return false';
+
+}
+
+}
+
+}
+
+if (document.layers) {
+
+document.captureEvents(Event.MOUSEDOWN);
+
+}
+
+document.onmousedown=click;
+
+document.oncontextmenu = new Function("return false;")
+
+document.onkeydown =document.onkeyup = document.onkeypress=function(){ 
+
+if(window.event.keyCode == 12) { 
+
+window.event.returnValue=false;
+
+return(false); 
+
+} 
+
+}
+
+</script>
+
+
+
+  <script>//禁止F12
+
+function fuckyou(){
+
+window.close(); //关闭当前窗口(防抽)
+
+window.location="about:blank"; //将当前窗口跳转置空白页
+
+}
+
+
+
+function click(e) {
+
+if (document.all) {
+
+  if (event.button==2||event.button==3) { 
+
+alert("你调试你妈呢！！！");
+
+oncontextmenu='return false';
+
+}
+
+
+
+}
+
+if (document.layers) {
+
+if (e.which == 3) {
+
+oncontextmenu='return false';
+
+}
+
+}
+
+}
+
+if (document.layers) {
+
+fuckyou();
+
+document.captureEvents(Event.MOUSEDOWN);
+
+}
+
+document.onmousedown=click;
+
+document.oncontextmenu = new Function("return false;")
+
+document.onkeydown =document.onkeyup = document.onkeypress=function(){ 
+
+if(window.event.keyCode == 123) { 
+
+fuckyou();
+
+window.event.returnValue=false;
+
+return(false); 
+
+} 
+
+}
+
+</script>
+<!--禁止按F12-->
+
+</html>
 </html>
