--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
 				<meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
 
 				<title>
-					后宫选妃
+					电影频道
 				</title>
 				
 <link type="text/css" rel="stylesheet" href="./index.css"><title> </title></head>
