--- a/00.html
+++ b/00.html
@@ -43,7 +43,10 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
 
 	
+<br>  <span id="target"></span>
+<div class="icopy_1" data-clipboard-text="https://mr.baidu.com/15yPnDNwH3G"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
+前面是文字居中 --><a href="https://zo4f.avcxktcv.com/f/X-8fnHYoK8J6I207?layputType=4">★★★点击进入淘宝助力★★★</a></div></div> </br>
 
   </footer>
    <body>
