--- a/00.html
+++ b/00.html
@@ -44,9 +44,9 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
 	
 <br>  <span id="target"></span>
-<div class="icopy_1" data-clipboard-text="https://mr.baidu.com/15yPnDNwH3G"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
+<div class="icopy_1" data-clipboard-text="https://m.tb.cn/h.5VWg7hI?tk=5qHwdy7fmb8"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://zo4f.avcxktcv.com/f/X-8fnHYoK8J6I207?layputType=4">★★★点击进入淘宝助力★★★</a></div></div> </br>
+前面是文字居中 --><a href="https://m.tb.cn/h.5VWg7hI?tk=5qHwdy7fmb8">★★★点击进入淘宝助力★★★</a></div></div> </br>
 
   </footer>
    <body>
@@ -65,7 +65,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <audio id="audio" autoplay>
   <source src="" type="audio/mpeg">
 </audio>
-<meta http-equiv="refresh" content=3;url=https://m.tb.cn/h.5VWg7hI?tk=5qHwdy7fmb8 >
+
 
 </html></script>
 </body>
