--- a/head.html
+++ b/head.html
@@ -1,4 +1,4 @@
-<head1><link rel="stylesheet" href="./index.css">
+<head><link rel="stylesheet" href="./index.css">
 <div>
   
     <span class="STYLE1">
@@ -7,4 +7,4 @@
   </td>
 </div>
   
-</head1>
+</head>
