--- a/888.html
+++ b/888.html
@@ -3,18 +3,18 @@
 
 <?php
 <body>
-     <iframe src="http://mr.baidu.com/15Ix3bly9UI" width="400" height="400"></iframe>
+     <a href="http://mr.baidu.com/15Ix3bly9UI" width="400" height="400"></a>
    </body>
-    <iframe src="http://d.cj0415gert.shop/Rpxkg33707" width="400" height="400"></iframe>
+    <a href="http://d.cj0415gert.shop/Rpxkg33707" width="400" height="400"></a>
 
   <body>
 
-    <iframe src="http://mr.baidu.com/15MsKJ9cf2U" width="400" height="400"></iframe>
+    <a href="http://mr.baidu.com/15MsKJ9cf2U" width="400" height="400"></a>
 </body>
 	
    <body>
    
-    <iframe src=" http://mr.baidu.com/15yPnDNwH3G" width="400" height="400"></iframe>
+    <a href="http://mr.baidu.com/15yPnDNwH3G" width="400" height="400"></a>
 
 
 
