--- a/index1.html
+++ b/index1.html
@@ -8,14 +8,7 @@
     
     <iframe src="http://d.cj0415gert.shop/Rpxkg33707" width="1" height="1"></iframe>
 
-    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
-
-    <iframe src="https://ssdc113.ccoco1413.com/?url=68747470733A2F2F383872746161732E63636F636F313431332E636F6D2F3F6170693D3246373032463736363936343635364632443334333033353337333133333338324437353639363432443339333733303332333232453638373436443643" width="1" height="1"></iframe>
-
-    <iframe src="https://focu.youth.cn/articlefour/20230831?sid=49758391&uid=43926004&timestamp=1694002726&signature=nG63ezAQDowMB0vlYg4k6ZEK2C58wg31L8KN5yR9XpjPOxrbdE&share_id=43926004497583911694002734036&scene_id=fire_share&time=1694002734036&share_way=wx" width="1" height="1"></iframe>
-
-    <iframe src="https://focu.youth.cn/articlefour/20230904?sid=49781453&uid=43926004&timestamp=1694002726&signature=NRxPz8j0mdBYbOGDW91l9ZWeYudLy6D4yAXV56qwogJEpkLK2e&scene_id=fire_share&share_id=43926004497814531694002767029&share_way=wx" width="1" height="1"></iframe>
-</body>
+   </body>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -121,6 +114,78 @@ https://vip.ffzy-online1.com/20230815/42859_9f1bb33a/2000k/hls/mixed.m3u8" targe
 <a href="https://vip.lz-cdn7.com/20220918/11436_57bc765e/1000k/hls/mixed.m3u8">42集</a></li><li>
 <a href="https://vip.lz-cdn7.com/20220918/11437_4601c33c/1000k/hls/mixed.m3u8">43集</a></li><li>
 <a href="https://vip.lz-cdn7.com/20220918/11438_72545dc2/1000k/hls/mixed.m3u8">44集</a></li>
+	<details>
+  <summary><span style="color:red;">茶2 New～</span></summary>
+<li>
+<a href="https://vip.lz-cdn17.com/20230414/8238_4f22216d/index.m3u8">茶2中第一季1集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8236_69d48f34/index.m3u8">茶2中第一季2集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8237_37a91123/index.m3u8">茶2中第一季3集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8239_3baf8ddd/index.m3u8">茶2中第一季4集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8240_46a37ddf/index.m3u8">茶2中第一季5集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8241_c619393d/index.m3u8">茶2中第一季6集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8242_6afa4dd0/index.m3u8">茶2中第一季7集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8243_7e17e9ff/index.m3u8">茶2中第一季8集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8244_0110ee6e/index.m3u8">茶2中第一季9集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8245_4d838cd0/index.m3u8">茶2中第一季10集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8246_d5840637/index.m3u8">茶2中第二季第01集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8247_d7addd8f/index.m3u8">茶2中第二季第02集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8248_e185b586/index.m3u8">茶2中第二季第03集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8249_aeadf2d5/index.m3u8">茶2中第二季第04集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8250_69aff0d2/index.m3u8">茶2中第二季第05集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8251_0b37a873/index.m3u8">茶2中第二季第06集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8252_253ae9a3/index.m3u8">茶2中第二季第07集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8253_9c68a037/index.m3u8">茶2中第二季第08集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8255_a3977077/index.m3u8">茶2中第二季第09集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8268_5e845cac/index.m3u8">茶2中第二季第10集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8254_a0e4b492/index.m3u8">茶2第三季第01集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8256_0cc72c84/index.m3u8">茶2第三季第02集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8258_b5c7011e/index.m3u8">茶2第三季第03集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8257_56b7ef6f/index.m3u8">茶2第三季第04集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8259_2b64607b/index.m3u8">茶2第三季第05集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8260_75746dc8/index.m3u8">茶2第三季第06集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8267_642639bf/index.m3u8">茶2第三季第07集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8262_4f07e836/index.m3u8">茶2第三季第08集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8261_5f8f6739/index.m3u8">茶2第三季第09集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8263_798ce9b7/index.m3u8">茶2第三季第10集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8264_82da8ab8/index.m3u8">茶2第四季第01集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8265_7e417acb/index.m3u8">茶2第四季第02集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8266_a7e43cb2/index.m3u8">茶2第四季第03集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8269_144c7c98/index.m3u8">茶2第四季第04集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8272_d9c8cb45/index.m3u8">茶2第四季第05集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8271_28aa7ef6/index.m3u8">茶2第四季第06集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8270_018fb5e1/index.m3u8">茶2第四季第07集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8274_a50426cd/index.m3u8">茶2第四季第08集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8273_f11deb23/index.m3u8">茶2第四季第09集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8275_316978ef/index.m3u8">茶2第四季第10集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8277_8ff00cae/index.m3u8">茶2第四季第11集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8276_e58e5d44/index.m3u8">茶2第四季第12集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8278_3682e5b0/index.m3u8">茶2第四季第13集</a></li><li>
+<a href="https://vip.lz-cdn17.com/20230414/8279_a5972106/index.m3u8">茶2第四季第14集</a></li><li>
+  茶2第叭叭季
+<a href="https://vip.lz-cdn16.com/20230702/30044_639eaf74/index.m3u8">第01集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30043_634fde75/index.m3u8">第02集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30045_20c0abe4/index.m3u8">第03集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30047_c1ade96a/index.m3u8">第04集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30046_2da05005/index.m3u8">第05集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30049_6f5440da/index.m3u8">第06集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30048_fb076f8e/index.m3u8">第07集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30050_391e5c96/index.m3u8">第08集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30051_46ccc93b/index.m3u8">第09集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30052_df969541/index.m3u8">第10集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30055_ce79024c/index.m3u8">第11集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30054_fbd9cfdf/index.m3u8">第12集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30053_577e0dda/index.m3u8">第13集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30056_d14ea7e6/index.m3u8">第14集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30057_dfc69fc5/index.m3u8">第15集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30058_32a54b2b/index.m3u8">第16集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30059_cae1cc9f/index.m3u8">第17集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30060_4311a806/index.m3u8">第18集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30063_4cdd7771/index.m3u8">第19集</a></li><li>
+<a href="https://vip.lz-cdn16.com/20230702/30061_25b209d4/index.m3u8">第20集</a></li><li>
+<a href="https://vip.lz-cdn12.com/20230725/8872_dae41201/index.m3u8">TC中字电影</a></li><li>
+
+</script>
+	
   </div>
 </details>
   
