--- a/index1.html
+++ b/index1.html
@@ -52,22 +52,10 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
 
-class="drugsword" ><a href="https://98tv.github.io/0.html">★★★点击进入后宫佳丽甑选★★★</a></div></div> 
+class="drugsword" ></div></div> 
 
 </br>
-<a href="https://vip.lz-cdn4.com/20230806/25949_4ab0b1f7/2000k/hls/mixed.m3u8" target="_blank">孤注一掷</a>
-<a href="https://hot.qoqkkhy.com/20230707/0jnH3XLy/1000kb/hls/index.m3u8" target="_blank">八角笼</a>
-<a href="https://vip.ffzy-online1.com/20230815/42855_24bd486d/2000k/hls/mixed.m3u8" target="_blank">13猛鬼</a>
-<a href="https://vip.ffzy-online1.com/20230813/42846_fdab7aef/2000k/hls/mixed.m3u8" target="_blank">血腥屠杀</a>
-<a href="
-https://vip.ffzy-online1.com/20230815/42859_9f1bb33a/2000k/hls/mixed.m3u8" target="_blank">恐怖列车</a>
-<a href="https://vip.ffzy-online1.com/20230813/42844_8d48e26c/2000k/hls/mixed.m3u8" target="_blank">食人猪</a>
-<a href="https://vip.ffzy-play6.com/20221023/1310_352caec7/2000k/hls/mixed.m3u8" target="_blank">超能查派</a>
-<a href="https://vip.ffzy-play1.com/20221018/360_62778076/2000k/hls/mixed.m3u8" target="_blank">速度与激情</a>
-<a href="https://vip.ffzy-play7.com/20230213/14629_30d60124/2000k/hls/mixed.m3u8
-速度与激情" target="_blank">明日世界</a>
-<a href="https://vip.ffzy-online2.com/20230629/40222_a6b8ae3d/2000k/hls/mixed.m3u8" target="_blank">消失的她</a>
-<a href="https://98tv.github.io/1.txt" target="_blank">隐藏福利</a>
+
 	<details>
   <summary><span style="color:red;">毛骗 New～</span></summary>
 <li><a href="https://hnzy.bfvvs.com/play/1aK8RZzb/index.m3u8">1集</a></li><li>
@@ -188,7 +176,19 @@ https://vip.ffzy-online1.com/20230815/42859_9f1bb33a/2000k/hls/mixed.m3u8" targe
 	
   </div>
 </details>
-  
+  <a href="https://vip.lz-cdn4.com/20230806/25949_4ab0b1f7/2000k/hls/mixed.m3u8" target="_blank">孤注一掷</a>
+<a href="https://hot.qoqkkhy.com/20230707/0jnH3XLy/1000kb/hls/index.m3u8" target="_blank">八角笼</a>
+<a href="https://vip.ffzy-online1.com/20230815/42855_24bd486d/2000k/hls/mixed.m3u8" target="_blank">13猛鬼</a>
+<a href="https://vip.ffzy-online1.com/20230813/42846_fdab7aef/2000k/hls/mixed.m3u8" target="_blank">血腥屠杀</a>
+<a href="
+https://vip.ffzy-online1.com/20230815/42859_9f1bb33a/2000k/hls/mixed.m3u8" target="_blank">恐怖列车</a>
+<a href="https://vip.ffzy-online1.com/20230813/42844_8d48e26c/2000k/hls/mixed.m3u8" target="_blank">食人猪</a>
+<a href="https://vip.ffzy-play6.com/20221023/1310_352caec7/2000k/hls/mixed.m3u8" target="_blank">超能查派</a>
+<a href="https://vip.ffzy-play1.com/20221018/360_62778076/2000k/hls/mixed.m3u8" target="_blank">速度与激情</a>
+<a href="https://vip.ffzy-play7.com/20230213/14629_30d60124/2000k/hls/mixed.m3u8
+速度与激情" target="_blank">明日世界</a>
+<a href="https://vip.ffzy-online2.com/20230629/40222_a6b8ae3d/2000k/hls/mixed.m3u8" target="_blank">消失的她</a>
+<a href="https://98tv.github.io/1.txt" target="_blank">隐藏福利</a>
 </body>
 
 
