--- a/index1.html
+++ b/index1.html
@@ -102,8 +102,9 @@ class="drugsword" ></div></div>
 <a href="https://vip.lz-cdn7.com/20220918/11436_57bc765e/1000k/hls/mixed.m3u8">42集</a></li><li>
 <a href="https://vip.lz-cdn7.com/20220918/11437_4601c33c/1000k/hls/mixed.m3u8">43集</a></li><li>
 <a href="https://vip.lz-cdn7.com/20220918/11438_72545dc2/1000k/hls/mixed.m3u8">44集</a></li>
+</details>	
 	<details>
-  <summary><span style="color:red;">茶2 New～</span></summary>
+  <summary><span style="color:blue;">茶2 New～</span></summary>
 <li>
 <a href="https://vip.lz-cdn17.com/20230414/8238_4f22216d/index.m3u8">茶2中第一季1集</a></li><li>
 <a href="https://vip.lz-cdn17.com/20230414/8236_69d48f34/index.m3u8">茶2中第一季2集</a></li><li>
