--- a/index1.html
+++ b/index1.html
@@ -57,7 +57,7 @@ class="drugsword" ></div></div>
 </br>
 
 	<details>
-  <summary><span style="color:red;">毛骗 New～</span></summary>
+  <summary><span style="color:red;">超级骗子 New～</span></summary>
 <li><a href="https://hnzy.bfvvs.com/play/1aK8RZzb/index.m3u8">1集</a></li><li>
 <a href="https://hnzy.bfvvs.com/play/YaOgRyGa/index.m3u8">2集</a></li><li>  
 <a href="https://hnzy.bfvvs.com/play/5eVv9P9e/index.m3u8">3集</a></li><li>
