--- a/index1.html
+++ b/index1.html
@@ -104,7 +104,7 @@ class="drugsword" ></div></div>
 <a href="https://vip.lz-cdn7.com/20220918/11438_72545dc2/1000k/hls/mixed.m3u8">44集</a></li>
 </details>	
 	<details><summary>
-<img src="https://img.manhua.weibo.com/page/cover/2018/05/09/YGGzhtvu.jpg" <span></span>
+<img src="https://img.manhua.weibo.com/page/cover/2018/05/09/YGGzhtvu.jpg" width="150" height="150"<span></span>
   </summary>
 <a href="https://vip.lz-cdn17.com/20230414/8238_4f22216d/index.m3u8">茶2中第一季1集</a></li><li>
 <a href="https://vip.lz-cdn17.com/20230414/8236_69d48f34/index.m3u8">茶2中第一季2集</a></li><li>
@@ -179,7 +179,7 @@ class="drugsword" ></div></div>
 </details>
 	<div class="image-container">
   <details><summary>
-<img src="https://p0.ssl.qhimgs1.com/sdr/400__/t01d5e1d9f1eb3d5736.jpg" <span><li>第一季</span>
+<img src="https://p0.ssl.qhimgs1.com/sdr/400__/t01d5e1d9f1eb3d5736.jpg"“width="150" height="150" <span><li>第一季</span>
   </summary></li>
 <li><a href="https://vip.lz-cdn17.com/20221226/690_70f36584/index.m3u8">第1集</a></li>
 <li><a href="https://vip.lz-cdn17.com/20221226/692_15b06482/index.m3u8">第2集</a></li>
