--- a/index1.html
+++ b/index1.html
@@ -41,7 +41,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 	</marquee></style>
 						<div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
 							<div class="cell title"><span>
-									请勿相信视频里的博彩信息<a href="https://98tv.github.io">--返回首页</a>								</a>
+									寻电影进群留言哦<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=T1fLn9A5sMf95ckaHDYDj4QIESVxLPN9&authKey=nW3OMNbCHdTolRPairfQP5iB32RZ5iTckvadxO5pn9gdl5Odt3j6euXpFA%2B%2FV1RT&noverify=0&group_code=609286349">--返回首页</a>								</a>
 								</span>
 							</div>  </div> </div> 
 						</div>
