--- a/index1.html
+++ b/index1.html
@@ -49,11 +49,11 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <br>  <span id="target"></span>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
-<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
+前面是文字居中 --><a href="#小程序://美团优选明日达超市真的真的省/5lEuvWYM6lgKlaK">★★★中秋福利6元五仁6月饼进微信点击哦★★★</a></div></div> 
+<br>  <span id="target"></span>
+<div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-class="drugsword" ></div></div> 
-
+前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手红包点击领取★★★</a></div></div> </br>
 </br>
 
 	<details>
