--- a/z1.html
+++ b/z1.html
@@ -39,7 +39,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 	</marquee></style>
 						<div class="mod mod-global-nav nav-header t5 center no-icon line bg2">
 							<div class="cell title"><span>
-									请勿相信视频里的博彩信息<a href="https://98tv.github.io">--返回首页</a>								</a>
+									寻电影进群留言哦<a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=T1fLn9A5sMf95ckaHDYDj4QIESVxLPN9&authKey=nW3OMNbCHdTolRPairfQP5iB32RZ5iTckvadxO5pn9gdl5Odt3j6euXpFA%2B%2FV1RT&noverify=0&group_code=609286349">--返回首页</a>								</a>
 								</span>
 							</div>  </div> </div> 
 						</div>
@@ -47,7 +47,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <br>  <span id="target"></span>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手85元每人拉新任务不限量点击领取★★★</a></div></div> </br>
+前面是文字居中 --><a href="#小程序://美团优选明日达超市真的真的省/5lEuvWYM6lgKlaK">★★★中秋福利6元五仁6月饼★★★用微信打开本页再点击</a></div></div> 
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div 
 
 class="drugsword" ><a href="https://98tv.github.io/0.html">★★★点击进入后宫佳丽甑选★★★</a></div></div> 
