--- a/index1.html
+++ b/index1.html
@@ -50,7 +50,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <br>  <span id="target"></span>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
-前面是文字居中 --><a href="#小程序://美团优选明日达超市真的真的省/5lEuvWYM6lgKlaK">★★★中秋福利6元五仁6月饼★★★用微信打开本页再点击</a></div></div> 
+前面是文字居中 --><a href="https://98tv.github.io/1.PNG">★★★支付宝每天送红包★★★</a></div></div> 
 <br>  <span id="target"></span>
 <div class="icopy_1" data-clipboard-text="https://wk7hx.kovtihgg.com/f/X-3RsOfN3Cw0z1dQ?layputType=4"data-clipboard-target="#target" id="copy_btn"><div class="drugsword" ><!-- 
 
