--- a/index1.html
+++ b/index1.html
@@ -137,7 +137,8 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
 </summary></details>
     </script>
-  <a href="https://vip.lz-cdn4.com/20230806/25949_4ab0b1f7/2000k/hls/mixed.m3u8" target="_blank">孤注一掷</a>
+	<a href="https://v.cdnlz4.com/20230903/25978_a854eecb/index.m3u8"><img src="https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2022%2F0527%2F83602df2j00rcjqu9005ac0014001ckm.jpg&thumbnail=750x2147483647&quality=85&type=jpg" width="150" height="150" alt="description"></a>
+	
 <a href="https://hot.qoqkkhy.com/20230707/0jnH3XLy/1000kb/hls/index.m3u8" target="_blank">八角笼</a>
 <a href="https://vip.ffzy-online1.com/20230815/42855_24bd486d/2000k/hls/mixed.m3u8" target="_blank">13猛鬼</a>
 <a href="https://vip.ffzy-online1.com/20230813/42846_fdab7aef/2000k/hls/mixed.m3u8" target="_blank">血腥屠杀</a>
