--- a/index.html
+++ b/index.html
@@ -58,6 +58,51 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 </br>
 </summary></details>
     </script>
+	<style>
+    input[type="text"] {
+        font-size: 50px; /* 设置字体大小 */
+        width: 600px; /* 设置输入框宽度 */
+        height: 80px; /* 设置输入框高度 */
+
+    }
+
+    button[type="submit"] {
+        font-size: 20px; /* 设置字体大小 */
+        padding: 10px 20px; /* 设置按钮内边距 */
+    }
+    button[type="submit"] {
+        background-color: #007bff; /* 设置按钮背景颜色 */
+        color: #fff; /* 设置按钮文字颜色 */
+        border: none; /* 去掉按钮边框 */
+        border-radius: 5px; /* 设置按钮圆角 */
+  
+    }
+</style>
+</style>
+    <meta charset="UTF-8">
+    <title>API 返回内容</title>
+</head>
+<body>
+    <h1>API 返回内容:</h1>
+
+    <div id="content"></div>
+ <form action="https://search.cctv.com/m/search.php" method="get" target="_blank">
+        <input type="text" qtext="qtext" placeholder="请输入cctv电视电影新闻直播在线">
+        <button type="submit">搜电视电影新闻</button>
+    </form>
+
+
+    <form action="https://www.cokemv.fun/search/-------------.html" method="get" target="_blank">
+        <input type="text" name="wd" placeholder="请输入电影名字">
+        <button type="submit">搜电影</button>
+    </form>
+
+    <form action="https://manga.bilibili.com/search?from=manga_homepage/？" method="get" target="_blank">
+        <input type="text" name="keyword" placeholder="请输入漫画名字">
+        <button type="submit">搜漫画</button>
+    </form>
+
+   
 	<a href="https://v.cdnlz4.com/20230903/25978_a854eecb/index.m3u8"><img src="https://nimg.ws.126.net/?url=http%3A%2F%2Fdingyue.ws.126.net%2F2022%2F0527%2F83602df2j00rcjqu9005ac0014001ckm.jpg&thumbnail=750x2147483647&quality=85&type=jpg" width="150" height="150" alt="description"></a>
 <details><summary>
 <img src="https://ts1.cn.mm.bing.net/th/id/R-C.5df2645476c723f8686defb0363483b9?rik=6DqUYEAWiTGuUw&riu=http%3a%2f%2fp4.itc.cn%2fimages01%2f20200815%2ff85b0fdbc5804db0a9a674b3d8fb2589.png&ehk=61cYdxrqwA%2fTFF09US2le3XU7aD%2byWEJxbDib4Wv3NQ%3d&risl=&pid=ImgRaw&r=0" width="150" height="150"<span></span>
