--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 </br>
 </summary></details>
     </script>
-	<style>
+	  <style>
     input[type="text"] {
         font-size: 50px; /* 设置字体大小 */
         width: 600px; /* 设置输入框宽度 */
@@ -78,18 +78,13 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
   
     }
 </style>
-</style>
-    <meta charset="UTF-8">
-    <title>API 返回内容</title>
+
 </head>
 <body>
-    <h1>API 返回内容:</h1>
+  
 
     <div id="content"></div>
- <form action="https://search.cctv.com/m/search.php" method="get" target="_blank">
-        <input type="text" qtext="qtext" placeholder="请输入cctv电视电影新闻直播在线">
-        <button type="submit">搜电视电影新闻</button>
-    </form>
+
 
 
     <form action="https://www.cokemv.fun/search/-------------.html" method="get" target="_blank">
@@ -99,7 +94,11 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 
     <form action="https://manga.bilibili.com/search?from=manga_homepage/？" method="get" target="_blank">
         <input type="text" name="keyword" placeholder="请输入漫画名字">
-        <button type="submit">搜漫画</button>
+        <button type="submit">搜漫画</button> </script>
+        </form>
+<a href="https://tv.cctv.com/live/m/index.shtml?spm=C28340.PkyZU989m3Vf.E5fNwho611Ug.1"><img src="https://s1.4sai.com/src/img/png/81/81dbaf661b9f42d484238d0990690bb4.png?imageMogr2/auto-orient/thumbnail/!282x282r/gravity/Center/crop/282x282/quality/85/&e=1735488000&token=1srnZGLKZ0Aqlz6dk7yF4SkiYf4eP-YrEOdM1sob:m0Sv3_GWHcnFdyL4sK21-TrA_Zc="width="50" height="50"
+<font style="background-color:yellow"><font size="8"><font color="#ff0000"><strong>CCTV电视.电影新闻直播</strong></font></font></font></a></li>
+    </form>
     </form>
 
    
