--- a/9.html
+++ b/9.html
@@ -239,6 +239,8 @@ infinite linear;}@keyframes masked-animation {0% {background-position: 0 0;}100%
 <a href="https://v.cdnlz12.com/20231016/10568_51de1412/index.m3u8">第八集</a></li><li>
 <a href="https://v.cdnlz1.com/20231017/22904_25bc17d3/index.m3u8">第九集</a></li><li>
 <a href="https://v.cdnlz1.com/20231017/22903_8d4a0d51/index.m3u8">第十集</a></li><li>
+<a href="https://v.cdnlz12.com/20231018/10625_a8c27722/index.m3u8">第十一集</a></li><li>
+<a href="https://v.cdnlz12.com/20231018/10624_c3b52dbf/index.m3u8">第十二集</a></li><li>
 
 
 	</summary></details>
